--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -1060,7 +1060,7 @@ body {
                     color: #5a5a5a;
                     outline: none;
                 }
-                &:focus{
+                &:focus {
                     box-shadow: none;
                 }
             }
@@ -1111,7 +1111,7 @@ body {
                 margin-top: 1rem;
                 outline: none;
                 padding: .5rem 1.5rem;
-                &:hover{
+                &:hover {
                     cursor: default;
                 }
             }
@@ -1224,13 +1224,13 @@ body {
                     text-align: center;
                     table-layout: fixed;
                     width: 100%;
-                    &.five{
-                        td{
+                    &.five {
+                        td {
                             height: 20%;
                         }
                     }
-                    &.six{
-                        td{
+                    &.six {
+                        td {
                             height: 16.66666%;
                         }
                     }
@@ -1336,6 +1336,188 @@ body {
                 svg {
                     opacity: .8;
                 }
+            }
+        }
+    }
+}
+
+.grid-wrapper {
+    font-family: '微軟正黑體';
+    display: grid;
+    grid-template-columns: repeat(10, [col] 1fr);
+    grid-template-rows: [row] 5% [row] 20% [row] 5% [row] auto;
+    .bar {
+        grid-column: col / span 10;
+        grid-row: row;
+        display: flex;
+        border-bottom: 1px solid $ig-gray;
+        justify-content: space-between;
+        .img {
+            width: 8rem;
+            height: 100%;
+            @include bg();
+            background-size: contain;
+        }
+        .buttons {
+            display: flex;
+            align-items: center;
+            margin-right: .5rem;
+            svg {
+                color: #7a7a7a;
+                font-size: 2rem;
+                &:nth-child(2) {
+                    font-size: 1.5rem;
+                }
+                &:nth-child(3) {
+                    &:hover {
+                        cursor: pointer;
+                        opacity: .8;
+                    }
+                }
+            }
+        }
+    }
+    .box {
+        display: none;
+        @include lg-width() {
+            grid-column: col / span 10;
+            grid-row: row 2;
+            display: flex;
+        }
+        .img {
+            width: 56rem;
+            height: 100%;
+            @include bg();
+            background-size: contain;
+            background-color: #F5F6F7;
+        }
+        .bg-color {
+            background: #F5F6F7;
+            border-top: 1px solid $ig-gray;
+            flex: auto;
+            height: 80%;
+            align-self: flex-end;
+        }
+    }
+    .sign {
+        display: none;
+        @include lg-width() {
+            grid-column: col;
+            grid-row: row 3;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            font-size: 1.5rem;
+        }
+    }
+    .line {
+        display: none;
+        @include lg-width() {
+            display: block;
+            grid-column: col 2 / span 7;
+            grid-row: row 3;
+        }
+        .input {
+            border: 1px solid $ig-gray;
+            border-radius: 2px;
+            height: 80%;
+            margin: .25rem;
+            padding: 0 0 0 1rem;
+            width: 99%;
+            svg {
+                color: #F9D775;
+            }
+            span {
+                font-size: 1rem;
+                font-weight: 540;
+            }
+            .right {
+                svg {
+                    color: #585858;
+                    padding: 0 .25rem;
+                    font-size: 1.5rem;
+                }
+                .icon-box {
+                    border-left: 1px solid $ig-gray;
+                }
+            }
+        }
+    }
+    .seach {
+        display: none;
+        @include lg-width() {
+            display: flex;
+            grid-column: col 9/ span 2;
+            grid-row: row 3;
+        }
+        .input {
+            border: 1px solid $ig-gray;
+            border-radius: 2px;
+            box-sizing: border-box;
+            color: #585858;
+            height: 80%;
+            font-weight: 540;
+            width: 90%;
+            padding: 0 .5rem;
+        }
+    }
+    .left-part {
+        grid-column: col /span 2;
+        grid-row: row 2 / span 3;
+        border-right: 1px solid $ig-gray;
+        @include lg-width() {
+            grid-row: row 4;
+        }
+        .img {
+            @include bg();
+            background-size: contain;
+            background-position: center top;
+            margin-left: .5rem;
+            height: 100%;
+            width: 10rem;
+        }
+        .b {
+            padding: 2rem;
+        }
+    }
+    .main {
+        grid-column: col 3 / span 8;
+        grid-row: row 2 / span 3;
+        @include lg-width() {
+            grid-row: row 4;
+        }
+        .card-container {
+            display: flex;
+            flex-wrap: wrap;
+            padding: 1rem;
+            justify-content: space-between;
+            width: 100%;
+            &::after {
+                content: "";
+                flex: auto;
+            }
+        }
+        .card-element {
+            flex: 0 1 12%;
+            height: 8rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin: .5rem 0;
+            padding: .5rem 0;
+            .img {
+                width: 5rem;
+                height: 5rem;
+                margin: auto;
+                @include bg();
+                background-size: contain;
+            }
+            .text {
+                margin: 1rem 0 0;
+                text-align: center;
+            }
+            &:hover {
+                background: #D1E8FF;
             }
         }
     }
