--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -837,7 +837,7 @@ body {
                     }
                     h6 {
                         color: #000000;
-                        font-size: .75rem;
+                        font-size: 13px;
                         font-weight: 400;
                         margin: 0;
                         margin-left: .5rem;
@@ -863,8 +863,7 @@ body {
                         @include bg();
                     }
                 }
-                .box {
-                    height: 40rem;
+                #main {
                     overflow-y: scroll;
                     padding-right: .25rem;
                     &::-webkit-scrollbar {
@@ -872,7 +871,7 @@ body {
                         background: transparent;
                     }
                     &:hover {
-                        padding-right: .5px;
+                        padding-right: .1px;
                         &::-webkit-scrollbar {
                             width: .25rem;
                             background: #FFFFFF;
@@ -881,160 +880,184 @@ body {
                             background-color: $grayLight;
                         }
                     }
-                    .friend {
-                        font-size: .75rem;
-                        padding: 1.5rem 0;
-                        background: #FFFFFF;
+                }
+                .box {
+                    height: 40rem;
+                }
+                .friend {
+                    font-size: 13px;
+                    padding: 1.5rem 0;
+                    background: #FFFFFF;
+                    position: relative;
+                    &.focus {
+                        background: #e9ebf2;
                         &:hover {
-                            filter: brightness(0.9);
-                            cursor: pointer;
-                        }
-                        .img {
-                            border-radius: 100%;
-                            flex-shrink: 0;
-                            height: 3rem;
-                            width: 3rem;
-                            @include bg();
-                        }
-                        .text {
-                            p {
-                                color: $grayLight;
-                            }
-                            h6,
-                            p {
-                                text-overflow: ellipsis;
-                                font-size: .75rem;
-                                margin: 0;
-                                overflow: hidden;
-                                white-space: nowrap;
-                                width: 10rem;
-                            }
-                        }
-                        .note {
-                            .time {
-                                color: $grayLight;
-                                margin: 0;
-                            }
-                            .number {
-                                border-radius: 100%;
-                                background: #0bc060;
-                                box-sizing: border-box;
-                                color: #FFFFFF;
-                                margin: 0;
-                                padding: 2px 7.5px;
-                                flex-shrink: 0;
-                            }
+                            background: #e9ebf2;
                         }
                     }
-                    .date {
-                        text-align: center;
-                        .date-text {
-                            display: inline-block;
-                            background-color: #f3f3f4;
-                            border-radius: 1rem;
-                            font-size: 11px;
-                            color: #82878f;
-                            text-align: center;
-                            padding: 3px 14px;
-                        }
+                    &:hover {
+                        background: #f3f3f7;
+                        cursor: pointer;
                     }
-                    .message {
-                        font-size: 15px;
-                        margin: 1.5rem;
-                        line-height: 21px;
-                        position: relative;
-                        .content {
-                            position: relative;
-                            display: inline-block;
-                            border-radius: 5px;
-                            word-wrap: break-word;
-                            word-break: break-all;
-                            padding: 7px 11px 8px;
-                            -webkit-user-select: text;
-                            user-select: text;
-                            &.blue{
-                                color: #475573;
-                                h5{
-                                    font-size: 1.5rem;
-                                    text-align: center;
-                                    margin: .5rem 0;
-                                    min-width: 4rem;
-                                    svg{
-                                        font-size: 2rem;
-                                        stroke-width: 1;
-                                    }
-                                }
-                            }
+                    .dot {
+                        background: #5181E2;
+                        border-radius: 100%;
+                        color: #FFFFFF;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        height: 18px;
+                        top: 50px;
+                        left: 55px;
+                        position: absolute;
+                        width: 18px;
+                    }
+                    .img {
+                        border-radius: 100%;
+                        flex-shrink: 0;
+                        height: 3rem;
+                        width: 3rem;
+                        @include bg();
+                    }
+                    .text {
+                        p {
+                            color: $grayLight;
                         }
-                        .message-time {
-                            font-size: 11px;
-                            color: #adb0b7;
+                        h6,
+                        p {
+                            text-overflow: ellipsis;
+                            font-size: 13px;
+                            margin: 0;
+                            overflow: hidden;
                             white-space: nowrap;
-                            margin: 0 7px 1px;
+                            width: 10rem;
                         }
-                        .img {
-                            border-radius: 10px;
-                            width: 8rem;
-                            height: 8rem;
-                            @include bg();
+                    }
+                    .note {
+                        .time {
+                            color: $grayLight;
+                            margin: 0;
                         }
-                        &.left {
-                            justify-content: flex-start;
-                            .content {
-                                background-color: #eceef3;
-                            }
-                            &.sign::before {
-                                content: "";
-                                background-image: url($link+'/leftEdge.PNG');
-                                position: absolute;
-                                top: 0;
-                                left: -7px;
-                                width: 8px;
-                                height: 8px;
-                                @include bg();
-                            }
-                        }
-                        &.right {
-                            justify-content: flex-end;
-                            .content {
-                                background-color: #c2f5a8;
-                            }
-                            &.sign::before {
-                                content: "";
-                                background-image: url($link+'/rightEdge.PNG');
-                                position: absolute;
-                                top: 0;
-                                right: -7px;
-                                width: 8px;
-                                height: 8px;
-                                @include bg();
-                            }
+                        .number {
+                            border-radius: 100%;
+                            background: #0bc060;
+                            box-sizing: border-box;
+                            color: #FFFFFF;
+                            margin: 0;
+                            padding: 2px 7.5px;
+                            flex-shrink: 0;
                         }
                     }
                 }
-                .icon {
-                    border-top: 1px solid $ig-gray;
-                    opacity: 0.8;
-                    font-size: 1.5rem;
-                    height: 3.75rem;
-                    svg:not(:first-child) {
-                        opacity: 0.8;
+                .date {
+                    text-align: center;
+                    .date-text {
+                        display: inline-block;
+                        background-color: #f3f3f4;
+                        border-radius: 1rem;
+                        font-size: 11px;
+                        color: #82878f;
+                        text-align: center;
+                        padding: 3px 14px;
                     }
-                    input {
-                        border: none;
-                        font-size: .75rem;
-                        &:focus {
-                            outline: none;
-                            cursor: default;
+                }
+                .message {
+                    font-size: 15px;
+                    margin: 1.5rem;
+                    line-height: 21px;
+                    position: relative;
+                    .content {
+                        position: relative;
+                        display: inline-block;
+                        max-width: 60%;
+                        border-radius: 5px;
+                        word-wrap: break-word;
+                        word-break: break-all;
+                        padding: 7px 11px 8px;
+                        -webkit-user-select: text;
+                        user-select: text;
+                        &.blue {
+                            color: #475573;
+                            h5 {
+                                font-size: 1.5rem;
+                                text-align: center;
+                                margin: .5rem 0;
+                                min-width: 4rem;
+                                svg {
+                                    font-size: 2rem;
+                                    stroke-width: 1;
+                                }
+                            }
                         }
                     }
-                    .right-part {
-                        svg {
-                            font-size: 1.25rem;
-                            opacity: .4;
-                            &:not(:first-child) {
-                                margin-left: 1rem;
-                            }
+                    .message-time {
+                        font-size: 11px;
+                        color: #adb0b7;
+                        white-space: nowrap;
+                        margin: 0 7px 1px;
+                    }
+                    .img {
+                        border-radius: 10px;
+                        width: 8rem;
+                        height: 8rem;
+                        @include bg();
+                    }
+                    &.left {
+                        justify-content: flex-start;
+                        .content {
+                            background-color: #eceef3;
+                        }
+                        &.sign::before {
+                            content: "";
+                            background-image: url($link+'/leftEdge.PNG');
+                            position: absolute;
+                            top: 0;
+                            left: -7px;
+                            width: 8px;
+                            height: 8px;
+                            @include bg();
+                        }
+                    }
+                    &.right {
+                        justify-content: flex-end;
+                        .content {
+                            background-color: #c2f5a8;
+                        }
+                        &.sign::before {
+                            content: "";
+                            background-image: url($link+'/rightEdge.PNG');
+                            position: absolute;
+                            top: 0;
+                            right: -7px;
+                            width: 8px;
+                            height: 8px;
+                            @include bg();
+                        }
+                    }
+                }
+            }
+            .icon {
+                border-top: 1px solid $ig-gray;
+                opacity: 0.8;
+                font-size: 1.5rem;
+                height: 3.75rem;
+                svg:not(:first-child) {
+                    opacity: 0.8;
+                }
+                input {
+                    border: none;
+                    font-size: .75rem;
+                    &:focus {
+                        outline: none;
+                        cursor: default;
+                    }
+                }
+                .right-part {
+                    svg {
+                        font-size: 1.25rem;
+                        opacity: .4;
+                        &:not(:first-child) {
+                            margin-left: 1rem;
                         }
                     }
                 }
@@ -1101,6 +1124,7 @@ body {
             }
         }
     }
+    
     .body {
         height: calc(100vh - 60px);
         .today {
@@ -1353,7 +1377,6 @@ body {
         }
     }
 }
-
 .grid-wrapper {
     font-family: '微軟正黑體';
     display: grid;
@@ -1390,6 +1413,7 @@ body {
             }
         }
     }
+    
     .box {
         display: none;
         @include lg-width() {
@@ -1430,6 +1454,7 @@ body {
             align-self: flex-end;
         }
     }
+    
     .sign {
         display: none;
         @include lg-width() {
@@ -1441,6 +1466,7 @@ body {
             font-size: 1.5rem;
         }
     }
+    
     .line {
         display: none;
         @include lg-width() {
@@ -1474,6 +1500,7 @@ body {
             }
         }
     }
+    
     .seach {
         display: none;
         @include lg-width() {
@@ -1492,6 +1519,7 @@ body {
             padding: 0 .5rem;
         }
     }
+    
     .left-part {
         grid-column: col /span 2;
         grid-row: row 2 / span 3;
@@ -1511,6 +1539,7 @@ body {
             padding: 2rem;
         }
     }
+    
     .main {
         grid-column: col 3 / span 8;
         grid-row: row 2 / span 3;
@@ -1560,12 +1589,11 @@ body {
         }
     }
 }
-
 .news-wrapper {
     background: #F7F7F7;
-    bottom:0;
+    bottom: 0;
     min-height: 100vh;
-    overflow-y:auto;
+    overflow-y: auto;
     position: fixed;
     top: 0;
     width: 100%;
@@ -1582,8 +1610,8 @@ body {
             font-size: 1.1rem;
             margin: 0;
             font-family: '微軟正黑體';
-            &:last-child{
-                &:hover{
+            &:last-child {
+                &:hover {
                     opacity: 0.7;
                     cursor: pointer;
                 }
@@ -1593,6 +1621,7 @@ body {
             font-size: 2rem;
         }
     }
+    
     .main {
         box-sizing: border-box;
         font-family: '微軟正黑體';
@@ -1612,27 +1641,27 @@ body {
         .img-container {
             width: 100%;
             margin: auto;
-            @include md-width(){
+            @include md-width() {
                 width: 75%;
             }
             .img {
                 margin: auto;
                 height: 20rem;
                 width: 100%;
-                @include md-width(){
+                @include md-width() {
                     width: 50%;
                 }
                 @include bg();
             }
-            .alt{
+            .alt {
                 background: #EAEAEA;
                 padding: .25rem 1rem;
                 margin: .25rem auto;
                 width: 100%;
-                @include md-width(){
+                @include md-width() {
                     width: 75%;
                 }
-                h5{
+                h5 {
                     margin: 0;
                 }
             }
