--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -1069,13 +1069,13 @@ body {
 }
 
 .cal-bg {
-    .direction{
+    .direction {
         border: none;
         background-color: #FFFFFF;
-        &:hover{
+        &:hover {
             opacity: .8;
         }
-        &:focus{
+        &:focus {
             outline: none;
         }
     }
@@ -1136,7 +1136,6 @@ body {
             }
         }
     }
-    
     .body {
         height: calc(100vh - 60px);
         .today {
@@ -1252,7 +1251,7 @@ body {
                     }
                     &.dark-green {
                         &::after {
-                            border:2px solid #0B8043;
+                            border: 2px solid #0B8043;
                             background-color: #FFFFFF;
                         }
                     }
@@ -1271,6 +1270,7 @@ body {
                 width: 95%;
                 .main-table {
                     height: 100%;
+                    overflow: hidden;
                     text-align: center;
                     table-layout: fixed;
                     width: 100%;
@@ -1287,7 +1287,7 @@ body {
                     td {
                         border: 1px solid $ig-gray;
                         border-top: none;
-                        overflow: hidden;
+                        // overflow: hidden;
                         padding-top: .5rem;
                         vertical-align: top;
                         .today {
@@ -1302,10 +1302,16 @@ body {
                             font-weight: 400;
                             text-align: left;
                             margin: .25rem 0;
+                            min-height: 28px;
                             padding: 5px;
-                            white-space: nowrap;
                             overflow: hidden;
+                            white-space: nowrap;
                             width: 90%;
+                            &.empty {
+                                position: relative;
+                                left: -25px;
+                                width: 115%;
+                            }
                             &.p0 {
                                 background-color: #039BE5;
                             }
@@ -1390,6 +1396,7 @@ body {
         }
     }
 }
+
 .grid-wrapper {
     font-family: '微軟正黑體';
     display: grid;
@@ -1426,7 +1433,6 @@ body {
             }
         }
     }
-    
     .box {
         display: none;
         @include lg-width() {
@@ -1467,7 +1473,6 @@ body {
             align-self: flex-end;
         }
     }
-    
     .sign {
         display: none;
         @include lg-width() {
@@ -1479,7 +1484,6 @@ body {
             font-size: 1.5rem;
         }
     }
-    
     .line {
         display: none;
         @include lg-width() {
@@ -1513,7 +1517,6 @@ body {
             }
         }
     }
-    
     .seach {
         display: none;
         @include lg-width() {
@@ -1532,7 +1535,6 @@ body {
             padding: 0 .5rem;
         }
     }
-    
     .left-part {
         grid-column: col /span 2;
         grid-row: row 2 / span 3;
@@ -1552,7 +1554,6 @@ body {
             padding: 2rem;
         }
     }
-    
     .main {
         grid-column: col 3 / span 8;
         grid-row: row 2 / span 3;
@@ -1602,6 +1603,7 @@ body {
         }
     }
 }
+
 .news-wrapper {
     background: #F7F7F7;
     bottom: 0;
@@ -1634,7 +1636,6 @@ body {
             font-size: 2rem;
         }
     }
-    
     .main {
         box-sizing: border-box;
         font-family: '微軟正黑體';
