--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -199,6 +199,7 @@ body {
     }
     .post-container {
         border: 1px solid $ig-gray;
+        margin-bottom: 4rem;
         .post-bar {
             display: flex;
             justify-content: space-between;
@@ -216,7 +217,7 @@ body {
             }
             h6 {
                 margin: 0;
-                font-size: .75rem;
+                // font-size: .75rem;
             }
         }
         .post-photo {
@@ -1550,9 +1551,6 @@ body {
             height: 100%;
             width: 10rem;
         }
-        .b {
-            padding: 2rem;
-        }
     }
     .main {
         grid-column: col 3 / span 8;
@@ -1581,6 +1579,7 @@ body {
             align-items: center;
             justify-content: center;
             margin: .5rem 0;
+            min-width: 122px;
             padding: .5rem 0;
             .img {
                 width: 5rem;
@@ -1591,7 +1590,11 @@ body {
             }
             .text {
                 margin: 1rem 0 0;
-                text-align: center;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                width: 120px;
             }
             &:hover {
                 background: #D1E8FF;
