--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -1132,6 +1132,10 @@ body {
             svg {
                 font-size: 1.5rem;
             }
+            .th-icon{
+                position: relative;
+                cursor: pointer;
+            }
             .self {
                 background: #C2185B;
                 box-sizing: border-box;
@@ -1577,7 +1581,7 @@ body {
             height: 10rem;
             border: none;
             background: #FFFFFF;
-            margin: .5rem 0;
+            margin: .5rem .25rem;
             width: 122px;
             padding: .5rem 0;
             position: relative;
@@ -1595,10 +1599,9 @@ body {
                 text-overflow: ellipsis;
                 overflow: hidden;
                 text-overflow: ellipsis;
-                width: 120px;
                 &.wrap {
                     white-space: initial;
-                    width: 100%;
+                    width: 122px;
                 }
             }
             &:hover {
@@ -1688,6 +1691,44 @@ body {
                     margin: 0;
                 }
             }
+        }
+    }
+}
+
+.apps {
+    position: absolute;
+    display: none;
+    top: 3rem;
+    right: -2rem;
+    background: white;
+    border-radius: 10px;
+    box-sizing: border-box;
+    width: 350px;
+    height: 470px;
+    padding: 30px 12px 70px 12px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
+    z-index: 100;
+    cursor: default;
+    justify-content: space-between;
+    box-sizing: border-box;
+    margin: 0;
+    list-style-type: none;
+    flex-wrap: wrap;
+    &--active{
+        display: flex;
+    }
+    &__element {
+        background-repeat: no-repeat;
+        background-position: 12.5px 12.5px;
+        background-size: 75px 75px;
+        height: 100px;
+        width: 100px;
+        flex-basis: 100px;
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
         }
     }
 }
